--- a/app/assets/css/sass/_rtm.scss
+++ b/app/assets/css/sass/_rtm.scss
@@ -186,8 +186,8 @@ button#rtmedia-add-media-button-post-update {
 	height: 100%;
 	font-size: 10px;
 	line-height: 15px;
-	color: #fff;
 	text-align: center;
+	word-wrap: initial;
 }
 
 .rtm-form {
